--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -9,6 +9,14 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
-
+        <header>
+            <h1>header</h1>
+        </header>
+<main>
+    <h1>Main content</h1>
+</main>
+<footer>
+    <h1>Footer</h1>
+</footer>
     </body>
 </html>
