--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <header>
-            <h1>header</h1>
+            <p>header</p>
         </header>
 <main>
-    <h1>Main content</h1>
+    <p>Main content</p>
 </main>
 <footer>
-    <h1>Footer</h1>
+    <p>Footer</p>
 </footer>
     </body>
 </html>
