--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <p>header</p>
+            <p>Header</p>
         </header>
 <main>
     <p>Main content</p>
